# electron-spout

./: .gitignore  CMakeLists.txt  Readme.md  Readme_EN.md  electron-spout.node.d.ts  main.cpp  package.json  spout_output.cpp  spout_output.h  vcpkg.json
